<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_black_chat_bubble_24"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_feeds"
        android:icon="@drawable/ic_baseline_dynamic_feed_24"
        android:title="@string/title_feeds" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />


</menu>