<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chat">

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.zapchat.ui.messages.MessagesFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_Messages" >
        <action
            android:id="@+id/action_navigation_chat_to_navigation_feeds"
            app:destination="@id/navigation_feeds" />
    </fragment>

    <fragment
        android:id="@+id/navigation_feeds"
        android:name="com.example.zapchat.ui.feeds.FeedsFragment"
        android:label="@string/title_feeds"
        tools:layout="@layout/fragment_feeds" >
        <action
            android:id="@+id/action_navigation_feeds_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.zapchat.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.zapchat.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.zapchat.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>